stopwatch , favicon , start/over divs

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <canvas id="canvas" width="1280" height="720"></canvas>
 
      <!-- for welcome -->
-     <div id="welcomeMessage" class="hidden"> <!-- set attribute to hidden on click-->
+     <div id="welcomeMessage" class="hidden"> 
         <div class="msg">Welcome</div>
         <div class="instructions">
             <span>Player 1 :</span>
@@ -47,7 +47,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
     startButton.addEventListener('click', function() {
         startStopwatch();
-        endWelcome(); // Added this line to call endWelcome() when the button is clicked
+        endWelcome(); 
     });
 });
 
